<resources>
    <string name="app_name">VocabWizard</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="required">Required</string>
    <string name="min_length_4">Min. 4 letters</string>
    <string name="min_length_6">Min. 6 letters</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_account">No account?</string>
    <string name="already_registered">Already registered?</string>
    <string name="register_now">Register now</string>
    <string name="login_now">Login now</string>
    <string name="submit">Submit</string>
    <string name="deck_overview">Your decks:</string>
    <string name="update_deck">Update Deck</string>
    <string name="add_card">Add Card</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="easy">Easy</string>
    <string name="good">Good</string>
    <string name="hard">Hard</string>
    <string name="repeat">Repeat</string>
    <string name="next">Next Card</string>
    <string name="definitions">Definitions:</string>
    <string name="examples">Examples:</string>
    <string name="synonyms">Synonyms:</string>
    <string name="antonyms">Antonyms:</string>
    <string name="audio">Play Audio</string>
    <string name="noCards">No cards to learn</string>
    <string name="noInternetConnection">No connection to Network</string>
    <string name="logout">Logout</string>
    <string name="login_failed">Name or Password not correct</string>
    <string name="api_not_reachable">Connection to Server failed</string>
    <string name="password_strength">At least one number and one special character</string>
    <string name="no_password_match">Do not match</string>
    <string name="create_deck">Create Deck</string>
    <string name="from_language">Source Language</string>
    <string name="to_language">Target Language</string>
    <string name="learning_rate">Learning Rate:</string>
    <string name="sure_about_delete">Are you sure you want to delete this deck:</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_card">New Card</string>
    <string name="enter_word">Enter Word</string>
    <string name="word_added">Word was added</string>
    <string name="delete_card">Delete Card</string>
    <string name="sure_about_delete_card">Are you sure you want to delete this card</string>
    <string name="lang_change_forbidden">Language can not be changed after creation</string>
    <string name="import_deck">Import Deck</string>
    <string name="enter_deck_id">Enter Deck Id</string>
    <string name="copy_id">Copy Id</string>
    <string name="copy_to_clipboard">Copied to Clipboard</string>
    <string name="already_own_deck">You already own this Deck</string>
    <string name="reverse_deck">Reverse Deck</string>
    <string name="statistics">Statistics</string>
    <string name="progress">Progress</string>
    <string name="very_bad">Very Bad</string>
    <string name="bad">Bad</string>
    <string name="fair">Fair</string>
    <string name="mediocre">Mediocre</string>
    <string name="okay">Okay</string>
    <string name="very_good">Very Good</string>
    <string name="excellent">Excellent</string>
    <string name="amazing">Amazing</string>
    <string name="no_decks">No Decks</string>
    <string name="no_cards">No Cards</string>
    <string name="please_enter_word">Please enter a word in the following language</string>
    <string name="no_internet">No connection to the internet</string>
</resources>