<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_deck"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deckNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:hint="@string/enter_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deckNameTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learning_rate"
                android:textStyle="bold"
                />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="50"
                android:stepSize="1"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_language"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    />

                <ImageView
                    android:id="@+id/fromLangImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/en"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_language"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    />

                <ImageView
                    android:id="@+id/toLangImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/en"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/error"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>