<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintVertical_bias="0.5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:layout_centerInParent="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp"
                >

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_deck"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginBottom="10dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/deckNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true"
                    android:layout_marginHorizontal="15dp"
                    android:hint="@string/enter_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/deckNameTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learning_rate"
                    android:layout_marginLeft="15dp"
                    android:textStyle="bold"
                    />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:valueFrom="1"
                    android:valueTo="50"
                    android:stepSize="1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fromLanguageAutoCompleteLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/fromLanguageAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from_language"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/toLanguageAutoCompleteLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/toLanguageAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/to_language"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/errorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/error"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>