<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/importDeckText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_deck"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deckIdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                android:hint="@string/enter_deck_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deckIdTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/error"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>