<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/addCradText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_card"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/addCradInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please enter a word in the following language"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                />

            <ImageView
                android:id="@+id/fromLangImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/en"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true"
                    android:hint="@string/enter_word">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/wordTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/errorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/error"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/submitWordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>